--- a/contracts/CMakeLists.txt
+++ b/contracts/CMakeLists.txt
@@ -30,6 +30,7 @@ add_subdirectory(noop)
 add_subdirectory(tic_tac_toe)
 add_subdirectory(payloadless)
 add_subdirectory(integration_test)
+add_subdirectory(hddofficial)
 
 
 file(GLOB SKELETONS RELATIVE ${CMAKE_SOURCE_DIR}/contracts "skeleton/*")
