Add hdd deposit contract
hdd deposit contract.
This contract used for strorage miner deposit scenario.

--- a/contracts/CMakeLists.txt
+++ b/contracts/CMakeLists.txt
@@ -31,6 +31,7 @@ add_subdirectory(tic_tac_toe)
 add_subdirectory(payloadless)
 add_subdirectory(integration_test)
 add_subdirectory(hddofficial)
+add_subdirectory(hdddeposit)
 
 
 file(GLOB SKELETONS RELATIVE ${CMAKE_SOURCE_DIR}/contracts "skeleton/*")
