Add temp dev folder for eosio.system contract

--- a/contracts/CMakeLists.txt
+++ b/contracts/CMakeLists.txt
@@ -33,6 +33,8 @@ add_subdirectory(integration_test)
 add_subdirectory(hddpool)
 add_subdirectory(hdddeposit)
 
+add_subdirectory(eosio.system_dev)
+
 
 file(GLOB SKELETONS RELATIVE ${CMAKE_SOURCE_DIR}/contracts "skeleton/*")
 
