add hddlock contract

--- a/contracts/CMakeLists.txt
+++ b/contracts/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory(payloadless)
 add_subdirectory(integration_test)
 add_subdirectory(hddpool)
 add_subdirectory(hdddeposit)
+add_subdirectory(hddlock)
 
 
 file(GLOB SKELETONS RELATIVE ${CMAKE_SOURCE_DIR}/contracts "skeleton/*")
